--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
+  flutter_markdown: ^0.7.7+1
+  flutter_screenutil: ^5.9.3
   geolocator: ^14.0.2
   google_generative_ai: ^0.4.7
-  
   google_sign_in: ^7.1.1
   http: ^1.4.0
+  http_parser: ^4.1.2
+  image_picker: ^1.1.2
   intl: ^0.20.2
   loading_animation_widget: ^1.3.0
+  logger: ^2.6.1
   page_transition: ^2.2.1
 
 dev_dependencies:
